fix: Eliminar overflow en x

--- a/games-repository-frontend/src/global.scss
+++ b/games-repository-frontend/src/global.scss
@@ -13,6 +13,7 @@
     box-sizing: border-box; /* Configuración común */
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     
   }
   h1, h2, h3, h4, h5, h6,p {
